syntax = "proto3";

option java_package = "com.osc.refresh_product";
option java_multiple_files = true;

message RefreshProductRequest{
  string MT = 1;
  string userId = 2;
}

message RefreshProductResponse{
  string MT = 1;
  string refreshResponse = 2;
}

service RefreshProductService{
  rpc GetRefreshRequest(RefreshProductRequest) returns (RefreshProductResponse);
}
